# base-nlp

./: README.md
code/C14/ner_deployment/: Dockerfile  docker-compose.yml  pyproject.toml
docs/chapter14/: 01_fastapi.md  02_uv_linux.md  03_docker_deployment.md
docs/chapter7/: 02_lstm_text_classification.md  03_bert_text_classification.md
